# croston

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  libcrostonconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  croston.sln  croston_config.h  msvc-autogen.py
contrib/: README.md  croston-pos-cli.bash-completion  croston-pos-qt.pro  croston-pos-tx.bash-completion  croston-posd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  croston-conf.md  croston-pos-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  croston-cli.1  croston-qt.1  croston-tx.1  croston-wallet.1  crostond.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  (+33 more)
(+457 files in other folders)
